# Peelpreter

./: .gitignore  README.md  pyproject.toml
examples/: arr_input.mon  closure.mon  count.mon  factorial.mon  fibonacci.mon  find.mon  map_n_reduce.mon  r_trianle.mon  remove.mon  sum.mon
src/peelpreter/: __init__.py
src/peelpreter/astt/: astt.py
src/peelpreter/error/: error.py
src/peelpreter/evaluator/: evaluator.py  mbuiltins.py
src/peelpreter/lexer/: tokenizer.py
src/peelpreter/objectt/: enviroment.py  objectt.py
src/peelpreter/parser/: parser.py
src/peelpreter/token_type/: __init__.py  token_type.py
